--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,94 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+} 
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #003D28;
+  height: 752px;
+  position: relative;
+}
+
+nav{
+  width: 1280px;
+  height: 50px;
+  position: absolute;
+  top: 24px;
+  left: 80px;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+}
+nav .logo{
+  color: #FFF;
+
+}
+nav ul{
+  color: #FFF;
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 24px;
+  list-style: none;
 }
 
-.App-link {
-  color: #61dafb;
+.home .homeContent{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  position: absolute;
+  top: 100%; left: 80px;
+  transform: translateY(-100%);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home .homeContent .textContent{
+  width: 40%;
+}
+.textContent h3{
+  font-size: 64px;
+  font-weight: 700;
+  line-height: 86.72px;
+  color: #F7F7F7;
+}
+.textContent p{
+  margin: 24px 0;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  color: #F7F7F7;
+}
+.textContent .btn{
+  width: 93px;
+  height: 48px;
+  outline: none;
+  border: none;
+  color: #FFFFFF;
+  background:#F17020;
+  border-radius: 8px;
+}
+.home .homeContent .imgContainer{
+  max-width: 60%;
+  max-height: 100%;
+}
+.imgContainer img{
+  width: 100%;
+  height: 100%;
+}
+.textContent .infos{
+  margin-top: 18px;
+  width: 381px;
+  min-height: 64px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  line-height: 28px;
+}
+.infos .info{
+  color: #FFFF;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.infos .info span:first-child{
+  font-weight: bold;
 }
