--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -1,125 +1,107 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Saira+Stencil+One&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Roboto;
-    font-size: 62.8%;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Saira+Stencil+One&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 62.5%;
+  font-family: Roboto;
 }
-html{
-    overflow-x: hidden;
-    scroll-behavior: smooth;
-    scroll-padding-top: 7rem;
-}
-body{
+body {
     background: #F2F2F2;
     width: 100%;
 }
-.product{
-    background: #003D28;
-    height: 24.6rem;
-    position: relative;
+.product {
+  background: #003d28;
+  height: 24.6rem;
+  position: relative !important;
 }
-nav{
-    width: 100%;
-    padding: 1.4rem 3rem;
-    display: flex;
-    justify-content: space-between;
-  }
-  .bg{
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%;
-    height: 100%;
-  }
-  nav .logo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: .8rem;
-    color: #FFF;
-    cursor: pointer;
-  }
-  .logo img{
-    width: 4rem;
-    height: 4rem;
-  }
-  .logo h3{
-    font-family: Saira Stencil One;
-    font-size: 3.2rem;
-    color: #F7F7F7;
-    font-weight: 400;
-  }
-  nav .searchContainer{
-    width: 46.4rem;
-    height: 4.8rem;
-    border-radius: .8rem;
-    overflow: hidden;
-    display: flex;
-  }
-  nav .searchContainer .search{
-    background: #FFF;
-    font-size: 1.6rem;
-    padding: 1rem 1.6rem;
-    width: 90%;
-    height: 100%;
-    outline: none;
-    border: none;
-  }
-  nav .searchContainer span{
-    background-color: #F17020;
-    line-height: 20%;
-    width: 10%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-  }
-  nav .icons {
-    display: flex;
-    gap: 3rem;
-    justify-content: center;
-    align-items: center;
-  }
-  nav .icons span{
-    font-size: 1.6rem;
-    font-weight: 500;
-    color: #FFF;
-  }
-  nav .icons span:hover{
-    color: #F17020;
-  }
-  nav .icons span img{
-    margin-right: 1rem;
-  }
+nav {
+  width: 100%;
+  padding: 1.4rem 3rem;
+  display: flex;
+  justify-content: space-between;
+}
+.bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+nav .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.8rem;
+  color: #fff;
+  cursor: pointer;
+}
+.logo img {
+  width: 4rem;
+  height: 4rem;
+}
+.logo h3 {
+  font-family: Saira Stencil One;
+  font-size: 3.2rem;
+  color: #f7f7f7;
+  font-weight: 400;
+}
+nav .searchContainer {
+  width: 46.4rem;
+  height: 4.8rem;
+  border-radius: 0.8rem;
+  overflow: hidden;
+  display: flex;
+}
+nav .searchContainer .search {
+  background: #fff;
+  font-size: 1.6rem;
+  font-weight: 600;
+  padding: 1rem 1.6rem;
+  width: 88%;
+  height: 100%;
+  outline: none;
+  border: none;
+}
+nav .searchContainer span {
+  background-color: #f17020;
+  line-height: 20%;
+  width: 12%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+nav .icons {
+  display: flex;
+  gap: 3rem;
+  justify-content: center;
+  align-items: center;
+}
+nav .icons span {
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #fff;
+}
+nav .icons span:hover{
+  color: #f17020 !important;
+}
+nav .icons span img {
+  margin-right: 1rem;
+}
 
-  .cartContainer{
-    padding: 10rem 6rem;
-  }
-  .cartTxt h1{
-    font-size: 6.4rem;
-    font-weight: 700;
-    color: #111313;
-    line-height: 7.5rem;
-  }
-  .cartTxt a{
-    display: inline-block;
-    margin-top: 3.5rem;
-    font-size: 1.6rem;
-    font-weight: 500;
-    color: #111313;
-    border: .1rem solid #F17020;
-    outline: none;
-    text-decoration: none;
-    padding: 1.2rem;
-    border-radius: .8rem;
-  }
-  .cartTxt a:hover{
-    background-color: #F17020;
-    color: #FFF;
-  }
+.product h1 {
+  position: absolute;
+  top: 15.9rem;
+  left: 40rem;
+  color: #fff;
+  font-size: 5.4rem;
+}
+.cartContainer{
+  padding: 10rem 6rem 0;
+}
 .mainCart{
     margin-top: 4rem;
     display: flex;
@@ -130,143 +112,70 @@ nav{
 .mainCart .leftContainer{
     background-color: #FFF;
     flex-basis: 62%;
-    padding: 5.5rem 3rem;
+    padding: 4rem 3rem;
     display: flex;
     flex-direction: column;
 }
-.leftContainer:last-child{
-    border: none;
-    background-color: #003D28;
-}
-.leftContainer h4{
-    font-size: 2.8rem;
-    font-weight: 400;
-}
-.leftContainer .cardBox{
-    display: flex;
-    flex-direction: column;
-    border-top: .1rem solid #999595;
-    border-bottom: .1rem solid #999595;
-    margin: 1.5rem 0rem;
-    padding: 3rem 0rem 2.5rem;
-}
-.cardBox .top{
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-}
-
-.cardBox .top .left{
-    display: flex;
-    justify-content: space-between;
-    width: 41.9rem;
-    position: relative;
-}
-.left img{
-    width: 14rem;
-    height: 14rem;
-}
-.left .txt{
-    width: 100%;
-    margin-left: 1rem;
-}
-.left .txt h4{
-    text-align: left;
-    font-size: 2rem;
-    font-weight: 400;
-    color: #111313;
-}
-.left .txt p{
-    text-align: left;
-    font-size: 2rem;
-    font-weight: 400;
-    color: #666666;
-}
-.border{
-    border: none !important;
-}
-.cardBox .top .right{
-    display: flex;
-    flex-direction: column;
-    width: 13.3rem;
-}
-
-.right .amount h3{
-    font-size: 2.8rem;
-    font-weight: 700;
-    color: #111313;
-}
-.right .amount .span{
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
-    margin: 2rem 0 3.5rem;
-}
-.amount .span .strike{
-    color: #111313;
-    text-decoration: line-through;
-    font-size: 2rem;
-    font-weight: 400;
-}
-.amount .span .percent{
-    padding: .8rem .4rem;
-    border-radius: .8rem;
-    background-color: #BCF9E4;
-    font-size: 1.6rem;
-    font-weight: 400;
-    text-align: center;
-
-}
-.num{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.num .sub{
-    background-color: #003D28;
-    width: 4rem;
-    height: 4rem;
-    line-height: 4rem;
-    border-radius: .8rem;
-    font-size: 1.6rem;
-    font-weight: bold;
-    color: #FFF;
-    text-align: center;
-    cursor: pointer;
-}
-.num .numItems{
-    font-size: 2.4rem;
+.leftContainer h3{
+    font-size: 3rem;
     font-weight: 700;
 }
-.num .add{
-    background-color: #003D28;
-    width: 4rem;
-    height: 4rem;
-    line-height: 4rem;
-    border-radius: .8rem;
-    font-size: 1.6rem;
-    font-weight: bold;
-    color: #FFF;
-    text-align: center;
-    cursor: pointer;
-}
-.cardBox .bottom{
+.leftContainer .flex{
     display: flex;
+    justify-content: space-between;
+}
+.leftContainer .flex .column{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 48%;
+}
+.leftContainer label{
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: #999595;
+    margin: 2rem 0 1.2rem;
+}
+.leftContainer input{
+    padding: 1.6rem;
+    color: #999595;
+    font-size: 1.4rem;
+    font-weight: 400;
+    border-radius: .8rem;
+    border: .1rem solid #999595;
+}
+.leftContainer input:focus{
+    outline: none;
+}
+.leftContainer .buttons{
+    display: flex;
+    justify-content: end;
     gap: 1rem;
-    margin-top: 3rem;
+    margin-top: 2rem;
 }
-.bottom button{
-    color: #003D28;
-    border-radius: .8rem;
-    padding: 1rem;
+.leftContainer .buttons .odd{
     background-color: transparent;
-    border: .1rem solid #77919B;
-    font-size: 1.6rem;
-    font-weight: 400;
+    color: #000;
+    outline: 1px solid #F17020;
 }
-.bottom button:hover{
-    background-color: #003D28;
+.leftContainer .buttons button{
+    padding: .8rem 1.4rem;
     color: #FFF;
+    background-color: #F17020;
+    border-radius: .8rem;
+    font-weight: 500;
+    font-size: 1.6rem;
+    outline: none;
+    border: none;
+}
+.leftContainer .buttons .real:hover{
+    background-color: transparent;
+    color: #000;
+    outline: 1px solid #F17020;
+}
+.leftContainer .buttons .odd:hover{
+    color: #FFF;
+    background-color: #F17020 !important;
+    outline: none;
 }
 .mainCart .rightContainer{
     background-color: #FFF;
@@ -352,11 +261,66 @@ nav{
     gap: 12px;
     align-items: center;
 }
-.pay span{
+.rightContainer .pay span{
     font-size: 2rem;
     font-weight: 500;
     line-height: 3.2rem;
     color: #999595;
+}
+.payContainer{
+    padding: 10rem 6rem;
+}
+.payContainer h1{
+    font-size: 4rem;
+}
+.payContainer .pay{
+    margin: 2rem 0 .6rem;
+}
+.payContainer .pay span{
+    margin-left: 1rem;
+    font-size: 1.3rem;
+    font-weight: 400;
+    line-height: 3.2rem;
+    color: #999595;
+}
+.pay span.bold{
+    font-weight: bolder;
+    color: #111313;
+}
+.payContainer .flex{
+    display: flex;
+    justify-content: space-between;
+}
+.payContainer .flex .column{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 48%;
+}
+.payContainer label{
+    font-size: 1.6rem;
+    font-weight: 400;
+    color: #999595;
+    margin: 2rem 0 1.2rem;
+}
+.payContainer input{
+    padding: 1.5rem;
+    color: #999595;
+    font-size: 1.6rem;
+    font-weight: 400;
+    border-radius: .8rem;
+    border: none;
+    background: #ddd;
+}
+.payContainer input:focus{
+    outline: none;
+}
+.payContainer .agree{
+    display: flex;
+    gap: 1.2rem;
+    margin-top: 3rem;
+}
+.payContainer .agree p{
+    font-weight: 400;
 }
 .footer{
     width: 100%;
@@ -509,5 +473,15 @@ nav{
     }
     .border{
         border-bottom: 1px solid #999595 !important;
+    }
+    .leftContainer .flex{
+        display: block;
+    }
+    .leftContainer .buttons{
+        flex-direction: column;
+        margin-top: 3.5rem;
+    }
+    .payContainer .flex{
+        display: block;
     }
 }
