--- a/src/Product.css
+++ b/src/Product.css
@@ -1,244 +1,278 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Saira+Stencil+One&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-size: 62.5%;
-    font-family: Roboto;
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Saira+Stencil+One&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 62.5%;
+  font-family: Roboto;
 }
-body{
-    width: 100%;
-    overflow-x: hidden;
+body {
+  width: 100%;
+  overflow-x: hidden;
 }
-.product{
-    background: #003D28;
-    height: 34.6rem;
-    position: relative !important;
+.product {
+  background: #003d28;
+  height: 34.6rem;
+  position: relative !important;
 }
-nav{
-    width: 100%;
-    padding: 1.4rem 3rem;
-    display: flex;
-    justify-content: space-between;
-  }
-  .bg{
-    position: absolute;
-    top: 0; left: 0;
-    width: 100%;
-    height: 100%;
-  }
-  nav .logo{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: .8rem;
-    color: #FFF;
-    cursor: pointer;
-  }
-  .logo img{
-    width: 4rem;
-    height: 4rem;
-  }
-  .logo h3{
-    font-family: Saira Stencil One;
-    font-size: 3.2rem;
-    color: #F7F7F7;
-    font-weight: 400;
-  }
-  nav .searchContainer{
-    width: 46.4rem;
-    height: 4.8rem;
-    border-radius: .8rem;
-    overflow: hidden;
-    display: flex;
-  }
-  nav .searchContainer .search{
-    background: #FFF;
-    font-size: 1.6rem;
-    padding: 1rem 1.6rem;
-    width: 90%;
-    height: 100%;
-    outline: none;
-    border: none;
-  }
-  nav .searchContainer span{
-    background-color: #F17020;
-    line-height: 20%;
-    width: 10%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-  }
-  nav .icons{
-    display: flex;
-    gap: .8rem;
-    justify-content: center;
-    align-items: center;
-  }
-  nav .icons span{
-    font-size: 1.6rem;
-    font-weight: 500;
-    color: #FFF;
-  }
-  nav .icons span:hover{
-    color: #F17020;
-  }
-  nav .icons span img{
-    margin-right: 1rem;
-  }
+nav {
+  width: 100%;
+  padding: 1.4rem 3rem;
+  display: flex;
+  justify-content: space-between;
+}
+.bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+nav .logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.8rem;
+  color: #fff;
+  cursor: pointer;
+}
+.logo img {
+  width: 4rem;
+  height: 4rem;
+}
+.logo h3 {
+  font-family: Saira Stencil One;
+  font-size: 3.2rem;
+  color: #f7f7f7;
+  font-weight: 400;
+}
+nav .searchContainer {
+  width: 46.4rem;
+  height: 4.8rem;
+  border-radius: 0.8rem;
+  overflow: hidden;
+  display: flex;
+}
+nav .searchContainer .search {
+  background: #fff;
+  font-size: 1.6rem;
+  font-weight: 600;
+  padding: 1rem 1.6rem;
+  width: 88%;
+  height: 100%;
+  outline: none;
+  border: none;
+}
+nav .searchContainer span {
+  background-color: #f17020;
+  line-height: 20%;
+  width: 12%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+nav .icons {
+  display: flex;
+  gap: 3rem;
+  justify-content: center;
+  align-items: center;
+}
+nav .icons span {
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #fff;
+}
+nav .icons span:hover {
+  color: #f17020;
+}
+nav .icons span img {
+  margin-right: 1rem;
+}
 
-  .product h1{
-    position: absolute;
-    top: 20.9rem; left: 8rem;
-    color: #FFF;
-    font-size: 5.4rem;
-  }
-  .categoryContainer{
-    padding: 5rem 6rem;
-  }
-  .categoryContainer .categoryBox{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .categoryContainer .categoryBox h3{
-    font-size: 2.8rem;
-    font-weight: 700;
-  }
-  .categoryContainer .categoryBox .category{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1.5rem;
-  }
-  .categoryContainer .categoryBox .category p{
-    font-size: 1.6rem;
-    font-weight: 400;
-    color: #111313;
-  }
-  .categoryContainer .categoryBox .sort{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-  }
-  .sort h4{
-    font-size: 1.6rem;
-    font-weight: 500;
-  }
-  .option{
-    background-color: #003D28;
-    padding: 1.2rem;
-    font-size: 1.6rem;
-    font-weight: 500;
-  }
-  .mainCategory{
-    display: flex;
-    justify-content: space-between;
-    gap: 1rem;
-    margin-top: 4rem;
-  }
-  .mainCategory .leftContainer{
-    width: 20%;
-    height: 76.8rem;
-    display: flex;
-    flex-direction: column;
-    gap: 2.4rem;
-
-  }
-.leftContainer .categoryItems, .priceItem, .available{
-    border: 1px solid #A1C0CC;
-    list-style: none;
-    display: flex;
-    flex-direction: column;
-    padding: 3.6rem 1.9rem;
-    gap: .8rem;
+.product h1 {
+  position: absolute;
+  top: 20.9rem;
+  left: 8rem;
+  color: #fff;
+  font-size: 5.4rem;
 }
-.priceItem h2{
-  font-size: 2rem;
+.categoryContainer {
+  padding: 5rem 6rem;
+}
+.categoryContainer .categoryBox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.categoryContainer .categoryBox h3 {
+  font-size: 2.8rem;
   font-weight: 700;
 }
-.available span{
-  margin-left: .8rem;
+.categoryContainer .categoryBox .category {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2.5rem;
+}
+.categoryContainer .categoryBox .category p:hover {
+  color: #f17020;
+}
+.categoryContainer .categoryBox .category p {
   font-size: 1.6rem;
   font-weight: 400;
   color: #111313;
 }
-.categoryItems li{
-    font-size: 1.6rem;
-    font-weight: 500;
+.categoryContainer .categoryBox .sort {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
 }
-.rightContainer{
-    width: 80%;
-    display: flex;
-    flex-direction: column;
+.sort h4 {
+  font-size: 1.8rem;
+  font-weight: 500;
 }
-.rightContainer .cardsContainer{
-  width: 100%; height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin: auto;
+.sort select {
+  border: 1px solid #003d28;
+  border-radius: .8rem;
+  background-color: transparent;
+  padding: 1.2rem;
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+.sort select option{
+  padding: 1.2rem;
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+.mainCategory {
+  display: flex;
+  justify-content: space-between;
+  gap: 1rem;
+  margin-top: 4rem;
+}
+.mainCategory .leftContainer {
+  width: 20%;
+  height: 76.8rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+.leftContainer .categoryItems,
+.priceItem,
+.available {
+  border: 1px solid #a1c0cc;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  padding: 3.6rem 1.9rem;
+  gap: 0.8rem;
+}
+.priceItem h2 {
+  font-size: 2rem;
+  font-weight: 700;
+}
+.range{
+  pointer-events: none;
+}
+.available span {
+  margin-left: 0.8rem;
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: #111313;
+}
+.categoryItems li {
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+.rightContainer {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+}
+.rightContainer .cardsContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin: auto;
 }
 .cardsContainer .card{
-    padding: .8rem .8rem 1.6rem .8rem;
-    border: .1rem solid #77919B;
-    margin: .8rem;
+  padding: 1rem 1rem 1.6rem 1rem;
+  border: .1rem solid #003d28;
+  margin: 0.8rem;
 }
-.card .imgContainer{
-    background-color: #F7F7F7F7;
-    position: relative;
+.card .imgContainer {
+  background-color: #f7f7f7f7;
+  position: relative;
 }
-.imgContainer img{
+.imgContainer img {
+  filter: blur(.2rem);
   max-width: 100%;
   max-height: 100%;
+  transition: .5s;
 }
-.card .imgContainer span{
-    background-color: #003D28;
-    width: 4rem;    height: 4rem;
-    line-height: 4rem;
-    color: #FFF;
-    font-size: 1.5rem;
-    text-align: center;
-    border-radius: .8rem;
-    position: absolute;
-    top: 14px; left: .8rem; 
+.cardsContainer .card .imgContainer img:hover{
+  filter: blur(0);
 }
-.card .imgContainer .heart{
-  width: 3rem;    height: 3rem;
+.card .imgContainer span {
+  background-color: #003d28;
+  width: 4rem;
+  height: 4rem;
+  line-height: 4rem;
+  color: #fff;
+  font-size: 1.5rem;
+  text-align: center;
+  border-radius: 0.8rem;
   position: absolute;
-  top: 1.6rem; left: 24.4rem; 
+  top: 14px;
+  left: 0.8rem;
 }
-.card p{
-    color: #111313;
-    font-weight: 400;
-    line-height: 2.8rem;
-    font-size: 1.8rem;
+.card .imgContainer .heart {
+  width: 3rem;
+  height: 3rem;
+  position: absolute;
+  top: 1.6rem;
+  left: 24.4rem;
 }
-.card h3{
-    color: #111313;
-    font-weight: 700;
-    line-height: 4.2rem;
-    font-size: 2.8rem;
+.card p {
+  margin-top: 1.2rem;
+  text-align: left;
+  color: #111313;
+  font-weight: 400;
+  line-height: 2.8rem;
+  font-size: 1.8rem;
 }
-.card .cartBtn{
-    width: 100%;
-    height: 4.8rem;
-    border: .1rem solid #F17020;
-    border-radius: .8rem;
-    background-color: transparent;
-    margin-top: 1.8rem;
-    cursor: pointer;
+.card p:hover{
+  color: #f17020;
 }
-  .card .cartBtn:hover, a:hover{
-    color: #FFF;
-    background-color: #F17020;
+.card h3 {
+  margin-top: -2rem;
+  color: #111313;
+  font-weight: 700;
+  line-height: 4.2rem;
+  font-size: 2.8rem;
 }
-.card a{
+.card .cartBtn {
+  width: 100%;
+  height: 4.8rem;
+  border: 0.1rem solid #f17020;
+  border-radius: 0.8rem;
+  background-color: transparent;
+  margin-top: 1.8rem;
+  cursor: pointer;
+}
+.card .cartBtn:hover,
+a:hover {
+  color: #fff;
+  background-color: #f17020;
+}
+.card a {
   width: 100%;
   height: 100%;
   text-decoration: none;
@@ -247,208 +281,231 @@ nav{
   font-size: 1.6rem;
   font-weight: 500;
 }
-.newsletter{
-    background-color: #111313;
-    height: 37.6rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.newsletter {
+  background-color: #111313;
+  height: 37.6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.newsletter .newsContainer{
-    width: 50rem;
+.newsletter .newsContainer {
+  width: 50rem;
 }
-.newsletter .newsContainer h4{
-    color: #f7f7f7;
-    font-size: 2.8rem;
-    font-weight: 700;
+.newsletter .newsContainer h4 {
+  color: #f7f7f7;
+  font-size: 2.8rem;
+  font-weight: 700;
 }
-.newsletter .newsContainer p{
-    color: #f7f7f7;
-    font-size: 1.6rem;
-    font-weight: 400;
-    margin: 18px 0;
+.newsletter .newsContainer p {
+  color: #f7f7f7;
+  font-size: 1.6rem;
+  font-weight: 400;
+  margin: 18px 0;
 }
-.newsletter .newsContainer input{
-    width: 32rem;
-    height: 4.8rem;
-    background-color: transparent;
-    border: 1px solid #F7F7F7;
-    border-radius: .8rem;
-    margin-right: 1.4rem;
+.newsletter .newsContainer input {
+  width: 32rem;
+  height: 4.8rem;
+  background-color: transparent;
+  border: 1px solid #f7f7f7;
+  border-radius: 0.8rem;
+  margin-right: 1.4rem;
 }
-.btn{
+.btn {
   width: 9.3rem;
   height: 4.8rem;
   outline: none;
   border: none;
-  color: #FFFFFF;
-  background:#F17020;
-  border-radius: .8rem;
+  color: #ffffff;
+  background: #f17020;
+  border-radius: 0.8rem;
   font-size: 1.6rem;
 }
-.footer{
-    width: 100%;
-    background-color: #FFF;
+.btn:hover{
+  border: 1px solid #f17020;
+  background-color: transparent;
 }
-.footer .topFooter{
-    padding: 11.6rem 2rem;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+.footer {
+  width: 100%;
+  background-color: #fff;
 }
-.topFooter .about, .info, .support, .connect{
-    flex-basis: 18%;
+.footer .topFooter {
+  padding: 11.6rem 2rem;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
-.topFooter .brandName{
-    font-family: Saira Stencil One;
-    font-weight: 400;
-    color: #111313;
-    font-size: 2.8rem;
-    display: flex;
-    justify-content: center;
-    flex-basis: 28%;
+.topFooter .about,
+.info,
+.support,
+.connect {
+  flex-basis: 18%;
 }
-.topFooter .brandName img{
-    width: 4rem;
-    height: 4rem;
-    margin-right: .8rem;
+.topFooter .brandName {
+  font-family: Saira Stencil One;
+  font-weight: 400;
+  color: #111313;
+  font-size: 2.8rem;
+  display: flex;
+  justify-content: center;
+  flex-basis: 28%;
 }
-.topFooter .about > h3, .info > h3, .support > h3, .connect > h3{
-    font-size: 2rem;
-    font-weight: 700;
-    transition: .5s;
+.topFooter .brandName img {
+  width: 4rem;
+  height: 4rem;
+  margin-right: 0.8rem;
 }
-.topFooter .about > h3:hover, .info > h3:hover, .support > h3:hover, .connect > h3:hover{
-    color: #F17020;
+.topFooter .about > h3,
+.info > h3,
+.support > h3,
+.connect > h3 {
+  font-size: 2rem;
+  font-weight: 700;
+  transition: 0.5s;
 }
-.topFooter .about > p, .info > p, .support > p{
-    margin-top: 1rem;
-    font-size: 1.6rem;
-    font-weight: 400;
-    transition: .3s;
+.topFooter .about > h3:hover,
+.info > h3:hover,
+.support > h3:hover,
+.connect > h3:hover {
+  color: #f17020;
 }
-.topFooter .about > p:hover, .info > p:hover, .support > p:hover{
-    transform: translateX(3%);
+.topFooter .about > p,
+.info > p,
+.support > p {
+  margin-top: 1rem;
+  font-size: 1.6rem;
+  font-weight: 400;
+  transition: 0.3s;
 }
-.topFooter .icons{
-    display: flex;
-    align-items: center;
-    gap: 1.2rem;
+.topFooter .about > p:hover,
+.info > p:hover,
+.support > p:hover {
+  transform: translateX(3%);
 }
-.topFooter .icons .icon{
-    height: 4rem;
-    width: 4rem;
-    line-height: 4rem;
-    padding: .5rem;
-    margin-top: 2rem;
-    text-align: center;
-    background-color: #F7F7F7;
-    border-radius: 50%;
-    border: 1px solid #000;
-    cursor: pointer;
+.topFooter .icons {
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
 }
-.topFooter .icons .icon:hover{
-  background-color: #F17020;
+.topFooter .icons .icon {
+  height: 4rem;
+  width: 4rem;
+  line-height: 4rem;
+  padding: 0.5rem;
+  margin-top: 2rem;
+  text-align: center;
+  background-color: #f7f7f7;
+  border-radius: 50%;
+  border: 1px solid #000;
+  cursor: pointer;
 }
-.topFooter .icons .icon img{
+.topFooter .icons .icon:hover {
+  background-color: #f17020;
+}
+.topFooter .icons .icon img {
   width: 2rem;
   height: 2rem;
 }
-.footer .bottomFooter{
-    height: 12rem;
-    padding: 0 8rem;
-    background-color: #003D28;
-    display: flex;
-    text-align: center;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    align-items: center;
+.footer .bottomFooter {
+  height: 12rem;
+  padding: 0 8rem;
+  background-color: #003d28;
+  display: flex;
+  text-align: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
 }
-.bottomFooter div{
-    color: #FFF;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2.5rem;
+.bottomFooter div {
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2.5rem;
 }
-.bottomFooter div > p, p{
+.bottomFooter div > p,
+.bottomFooter p {
   font-size: 1.6rem;
   font-weight: 700;
-
 }
-.bottomFooter:last-child{
-    color: #FFF;
+.bottomFooter:last-child {
+  color: #fff;
 }
-.hidden{
+.hidden {
   display: none !important;
 }
-@media (max-width: 991px){
-  *{
-      font-size: 50%;
+@media (max-width: 991px) {
+  * {
+    font-size: 50%;
   }
-  .hide{
+  .hide {
     display: none !important;
   }
-  .hidden{
-    display: flex!important;
+  .hidden {
+    display: flex !important;
   }
-  .rightContainer{
-      width: 100%;
-      justify-content: center;
+  .rightContainer {
+    width: 100%;
+    justify-content: center;
   }
-  .product{
-      height: 27.6rem;
+  .product {
+    height: 27.6rem;
   }
-  nav .searchContainer{
+  nav .searchContainer {
     position: absolute;
-    top: 70%; left: 50%;
+    top: 70%;
+    left: 50%;
     transform: translateX(-50%);
   }
-  .menu{
+  .menu {
     cursor: pointer;
   }
-  .filsort{
+  .filsort {
     margin: auto;
     width: 80%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: .9rem;
-    border-radius: .8rem;
-    border: .1rem solid #A1C0CC;
+    padding: 0.9rem;
+    border-radius: 0.8rem;
+    border: 0.1rem solid #a1c0cc;
   }
-  .filsort .filter, .sort{
+  .filsort .filter,
+  .sort {
     width: 50%;
   }
-  .filsort .filter{
-    border-right: .1rem solid #A1C0CC;
+  .filsort .filter {
+    border-right: 0.1rem solid #a1c0cc;
   }
-  .filsort .sort{
+  .filsort .sort {
     text-align: right;
   }
-  .filsort .filter span{
+  .filsort .filter span {
     font-size: 1.6rem;
     font-weight: 400;
-    margin-left: .5rem;
-    color: #F17020;
+    margin-left: 0.5rem;
+    color: #f17020;
   }
-  .filsort .sort span{
+  .filsort .sort span {
     font-size: 1.6rem;
     font-weight: 400;
-    margin-left: .5rem;
-    color: #F17020;
+    margin-left: 0.5rem;
+    color: #f17020;
   }
-  .footer .topFooter{
+  .footer .topFooter {
     flex-direction: column;
   }
-  .topFooter .brandName, .about, .info, .support, .connect{
+  .topFooter .brandName,
+  .about,
+  .info,
+  .support,
+  .connect {
     text-align: center;
-      margin-bottom: 3.5rem;
+    margin-bottom: 3.5rem;
   }
-  .topFooter .icons{
+  .topFooter .icons {
     justify-content: center;
   }
-  .footer .bottomFooter{
+  .footer .bottomFooter {
     flex-direction: column;
     justify-content: center;
     gap: 1.2rem;
