--- a/src/Product.css
+++ b/src/Product.css
@@ -137,13 +137,13 @@ nav .icons span img {
 }
 .sort select {
   border: 1px solid #003d28;
-  border-radius: .8rem;
+  border-radius: 0.8rem;
   background-color: transparent;
-  padding: 1.2rem;
+  padding: 1.2rem 2rem;
   font-size: 1.6rem;
   font-weight: 500;
 }
-.sort select option{
+.sort select option {
   padding: 1.2rem;
   font-size: 1.6rem;
   font-weight: 500;
@@ -175,14 +175,16 @@ nav .icons span img {
   font-size: 2rem;
   font-weight: 700;
 }
-.range{
-  pointer-events: none;
-}
 .available span {
   margin-left: 0.8rem;
   font-size: 1.6rem;
   font-weight: 400;
   color: #111313;
+}
+.available input {
+  accent-color: #999595;
+  width: 2rem;
+  height: 2rem;
 }
 .categoryItems li {
   font-size: 1.6rem;
@@ -202,9 +204,9 @@ nav .icons span img {
   flex-wrap: wrap;
   margin: auto;
 }
-.cardsContainer .card{
+.cardsContainer .card {
   padding: 1rem 1rem 1.6rem 1rem;
-  border: .1rem solid #003d28;
+  border: 0.1rem solid #003d28;
   margin: 0.8rem;
 }
 .card .imgContainer {
@@ -212,12 +214,12 @@ nav .icons span img {
   position: relative;
 }
 .imgContainer img {
-  filter: blur(.2rem);
+  filter: blur(0.2rem);
   max-width: 100%;
   max-height: 100%;
-  transition: .5s;
+  transition: 0.5s;
 }
-.cardsContainer .card .imgContainer img:hover{
+.cardsContainer .card .imgContainer img:hover {
   filter: blur(0);
 }
 .card .imgContainer span {
@@ -248,7 +250,7 @@ nav .icons span img {
   line-height: 2.8rem;
   font-size: 1.8rem;
 }
-.card p:hover{
+.card p:hover {
   color: #f17020;
 }
 .card h3 {
@@ -258,27 +260,21 @@ nav .icons span img {
   font-size: 2.8rem;
 }
 .card .cartBtn {
+  color: #000;
   width: 100%;
   height: 4.8rem;
   border: 0.1rem solid #f17020;
+  outline: none;
+  font-size: 1.6rem;
+  font-weight: 500;
   border-radius: 0.8rem;
   background-color: transparent;
   margin-top: 1.8rem;
   cursor: pointer;
 }
-.card .cartBtn:hover,
-a:hover {
+.card .cartBtn:hover {
   color: #fff;
   background-color: #f17020;
-}
-.card a {
-  width: 100%;
-  height: 100%;
-  text-decoration: none;
-  color: #000;
-  outline: none;
-  font-size: 1.6rem;
-  font-weight: 500;
 }
 .newsletter {
   background-color: #111313;
@@ -319,7 +315,7 @@ a:hover {
   border-radius: 0.8rem;
   font-size: 1.6rem;
 }
-.btn:hover{
+.btn:hover {
   border: 1px solid #f17020;
   background-color: transparent;
 }
