--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -330,6 +330,8 @@ nav .icons span img {
 .footer{
     width: 100%;
     background-color: #FFF;
+    margin-top: 10rem;
+    border-top: .1rem solid #666666;
 }
 .footer .topFooter{
     padding: 11.6rem 2rem;
@@ -441,6 +443,7 @@ nav .icons span img {
       position: absolute;
       top: 70%; left: 50%;
       transform: translateX(-50%);
+      width: 80%;
     }
     .menu{
       cursor: pointer;
