--- a/src/Product.css
+++ b/src/Product.css
@@ -80,16 +80,38 @@ nav .icons {
   justify-content: center;
   align-items: center;
 }
-nav .icons span {
+nav .icons .topLeft{
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+nav .icons .topLeft span {
   font-size: 1.6rem;
   font-weight: 500;
   color: #fff;
 }
-nav .icons span:hover {
+nav .icons .topLeft span:hover {
   color: #f17020;
 }
-nav .icons span img {
-  margin-right: 1rem;
+nav .icons .topLeft .cart{
+  position: relative;
+}
+nav .icons .topLeft .cart img{
+  cursor: pointer;
+  position: relative;
+}
+nav .icons .topLeft .cart .cartNum{
+  position: absolute;
+  right: -.5rem; top: -.5rem;
+  height: 1.6rem;
+  width: 1.6rem;
+  text-align: center;
+  line-height: 1.6rem;
+  font-size: 1.2rem;
+  color: #FFF;
+  border-radius: 50%;
+  background-color: red;
 }
 
 .product h1 {
@@ -190,6 +212,14 @@ nav .icons span img {
   font-size: 1.6rem;
   font-weight: 500;
 }
+.newsletter {
+  background-color: #111313;
+  height: 37.6rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .rightContainer {
   width: 80%;
   display: flex;
@@ -203,85 +233,6 @@ nav .icons span img {
   justify-content: center;
   flex-wrap: wrap;
   margin: auto;
-}
-.cardsContainer .card {
-  padding: 1rem 1rem 1.6rem 1rem;
-  border: 0.1rem solid #003d28;
-  margin: 0.8rem;
-}
-.card .imgContainer {
-  background-color: #f7f7f7f7;
-  position: relative;
-}
-.imgContainer img {
-  filter: blur(0.2rem);
-  max-width: 100%;
-  max-height: 100%;
-  transition: 0.5s;
-}
-.cardsContainer .card .imgContainer img:hover {
-  filter: blur(0);
-}
-.card .imgContainer span {
-  background-color: #003d28;
-  width: 4rem;
-  height: 4rem;
-  line-height: 4rem;
-  color: #fff;
-  font-size: 1.5rem;
-  text-align: center;
-  border-radius: 0.8rem;
-  position: absolute;
-  top: 14px;
-  left: 0.8rem;
-}
-.card .imgContainer .heart {
-  width: 3rem;
-  height: 3rem;
-  position: absolute;
-  top: 1.6rem;
-  left: 24.4rem;
-}
-.card p {
-  margin-top: 1.2rem;
-  text-align: left;
-  color: #111313;
-  font-weight: 400;
-  line-height: 2.8rem;
-  font-size: 1.8rem;
-}
-.card p:hover {
-  color: #f17020;
-}
-.card h3 {
-  color: #111313;
-  font-weight: 700;
-  line-height: 4.2rem;
-  font-size: 2.8rem;
-}
-.card .cartBtn {
-  color: #000;
-  width: 100%;
-  height: 4.8rem;
-  border: 0.1rem solid #f17020;
-  outline: none;
-  font-size: 1.6rem;
-  font-weight: 500;
-  border-radius: 0.8rem;
-  background-color: transparent;
-  margin-top: 1.8rem;
-  cursor: pointer;
-}
-.card .cartBtn:hover {
-  color: #fff;
-  background-color: #f17020;
-}
-.newsletter {
-  background-color: #111313;
-  height: 37.6rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 .newsletter .newsContainer {
   width: 50rem;
@@ -322,6 +273,8 @@ nav .icons span img {
 .footer {
   width: 100%;
   background-color: #fff;
+  margin-top: 10rem;
+  border-top: .1rem solid #666666;
 }
 .footer .topFooter {
   padding: 11.6rem 2rem;
@@ -450,6 +403,7 @@ nav .icons span img {
     top: 70%;
     left: 50%;
     transform: translateX(-50%);
+    width: 80%;
   }
   .menu {
     cursor: pointer;
